@@ -157,6 +157,9 @@ Trunk (unreleased changes)
 
     HADOOP-7010. Typo in FileSystem.java. (Jingguo Yao via eli)
 
+    HADOOP-7009. MD5Hash provides a public factory method that creates an
+    instance of thread local MessageDigest. (hairong)
+
   OPTIMIZATIONS
 
     HADOOP-6884. Add LOG.isDebugEnabled() guard for each LOG.debug(..).
